@@ -5,3 +5,4 @@
 @rem the only thing we need from %YTEX_HOME%\config\desc is the ytex.properties file
 @set CLASSPATH=%TOMCAT_CP%
 @set CATALINA_OPTS=-Dorg.apache.el.parser.COERCE_TO_ZERO=false
+@set JAVA_OPTS=-Xmx1g -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=128M 
